src/objects/OCD_Beh_Eligibility__c.object
<CustomObject>
    <description>Behavioural Discount Eligibility Conditions will be stored in this Object.</description>
    <fields>
        <fullName>Beh_Discount_ID__c</fullName>
        <formula>CASESAFEID( OCD_Beh_Discount__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beh Discount ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <inlineHelpText>Must be a unique String across the PL. (Generate a name with PL + Number)
This should match the Criteria Group Id in the corresponding Behavior Discount Item Object.</inlineHelpText>
        <label>Group Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN__c</fullName>
        <label>IDN</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Qty__c</fullName>
        <label>Max Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Qty__c</fullName>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Beh_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCD Beh Discount</label>
        <referenceTo>OCD_Beh_Discount__c</referenceTo>
        <relationshipLabel>Eligibility</relationshipLabel>
        <relationshipName>OCD_Beh_Eligibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Based_On__c</fullName>
        <label>Products Based On</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># of Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductVolume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>OCD Beh Eligibility</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCD Beh Eligibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>